# kos-samples

./: Dockerfile  README.md
hello_world/: CMakeLists.txt  README.md  cross-build.sh  output.txt  run-hello.sh
hello_world/einit/: init.yaml.in  security.psl
hello_world/hello/: hello.c
mqtt_subscriber/: README.md  cross-build.sh  mosquitto-spamer.sh
mqtt_subscriber/einit/src/: init.yaml.in
mqtt_subscriber/mqtt/: docker-compose.yaml
mqtt_subscriber/mqtt/conf/: mosquitto.conf
mqtt_subscriber_echo/: CMakeLists.txt  README.md  cross-build.sh
mqtt_subscriber_echo/client/: CMakeLists.txt
mqtt_subscriber_echo/client/src/: client.cpp  subscriber.cpp  subscriber.h
mqtt_subscriber_echo/einit/: CMakeLists.txt
mqtt_subscriber_echo/einit/src/: init.yaml.in  security.psl
mqtt_subscriber_echo/server/src/: server.c
